# nopt021-modern-game-theory-algorithms

./: .gitignore  devenv.nix  pyproject.toml
libs/: test_extensive_games.py  test_utils.py  test_week1.py  test_week2.py  test_week2_demo.html  test_week2_demo.py  test_week3.py  test_week3_demo.html  test_week3_demo.py  test_week6_and_8.py  test_week6_and_8_demo.html  test_week6_and_8_demo.py  text.typ  text_week3.typ  week1.py  week2.py  week3.py  week4.py  week5.py  week6.py  week8.py
