[tool.poetry]
name = "2023-modern-algorithmic-game-theory"
version = "0.1.0"
description = ""
authors = ["Vojtech Hotmar <vojtech.hotmar@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11,<3.13"
jupyter = "^1.0.0"
matplotlib = "^3.8.1"
pytest = "^7.4.3"
scipy = "^1.11.3"
tabulate = "^0.9.0"
nashpy = "^0.0.40"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
